modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   index.html 	modified:   sass/components/_socials.scss

--- a/index.html
+++ b/index.html
@@ -470,28 +470,28 @@
           <p class="footer__comment">DOŁĄCZ DO NAS</p>
           <div class="footer__socials">
             <div class="socials">
-              <div class="socials__area socials__area-greybackground transition">
-                <div class="socials__subarea">
+              <div class="socials__area socials__area--greybackground transition">
+                <div class="socials__subarea socials__subarea--whitecolor">
                   <svg class="socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </div>
               </div>
-              <div class="socials__area transition">
+              <div class="socials__area socials__area--greybackground transition">
                 <div class="socials__subarea">
                   <svg class="socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </div>
               </div>
-              <div class="socials__area transition">
+              <div class="socials__area socials__area--greybackground transition">
                 <div class="socials__subarea">
                   <svg class="socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </div>
               </div>
-              <div class="socials__area transition">
+              <div class="socials__area socials__area--greybackground transition">
                 <div class="socials__subarea">
                   <svg class="socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
