--- a/index.html
+++ b/index.html
@@ -478,21 +478,21 @@
                 </div>
               </div>
               <div class="socials__area socials__area--greybackground transition">
-                <div class="socials__subarea">
+                <div class="socials__subarea socials__subarea--whitecolor">
                   <svg class="socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </div>
               </div>
               <div class="socials__area socials__area--greybackground transition">
-                <div class="socials__subarea">
+                <div class="socials__subarea socials__subarea--whitecolor">
                   <svg class="socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </div>
               </div>
               <div class="socials__area socials__area--greybackground transition">
-                <div class="socials__subarea">
+                <div class="socials__subarea socials__subarea--whitecolor">
                   <svg class="socials__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
@@ -522,7 +522,7 @@
                   />
                 </label>
                 <button class="newsletter__button" type="submit">
-                  <span class="newsletter__button-comment">Zapisz się</span>
+                  <span class="newsletter__button--comment">Zapisz się</span>
                   <svg class="socials__icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-icon-send"></use>
                   </svg>
