--- a/portfolio.html
+++ b/portfolio.html
@@ -16,62 +16,64 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/main.min.css" />
   </head>
   <body>
     <header class="header">
-      <div class="header-div container">
+      <div class="header__body container">
         <a class="logo" href="#">
-          <span class="logo-web span">Web</span>
+          <span class="logo__web span">Web</span>
           <span class="span">Studio</span>
         </a>
         <nav class="navigation">
-          <ul class="navigation-list">
-            <li><a class="navigation highlight highlight-a" href="index.html">Agencja</a></li>
+          <ul class="navigation__list">
             <li>
-              <a
-                class="navigation highlight navigation-list-portfolio highlight-a underline"
-                href="portfolio.html"
+              <a class="navigation highlight transition underline" href="index.html">Agencja</a>
+            </li>
+            <li>
+              <a class="transition navigation highlight navigation__link" href="portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li><a class="navigation highlight highlight-a" href="">Kontakty</a></li>
+            <li><a class="navigation highlight transition" href="">Kontakty</a></li>
           </ul>
         </nav>
-        <div class="div-address">
-          <div class="div-icon">
-            <svg width="16" height="12" class="icon-address highlight">
+        <div class="address">
+          <div class="address__section transition">
+            <svg width="16" height="12" class="address__icon highlight transition">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
-            <a class="address highlight address-icon" href="mailto:info@devstudio.com"
+            <a class="address highlight address__link transition" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </div>
-          <div class="div-icon header-phone">
-            <svg width="16" height="12" class="icon-address highlight">
+          <div class="address__section transition address__section--padding">
+            <svg width="16" height="12" class="address__icon highlight transition">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
-            <a class="address address-icon highlight" href="tel:+48111111111">+48 111 111 111</a>
+            <a class="address address__link highlight transition" href="tel:+48111111111"
+              >+48 111 111 111</a
+            >
           </div>
         </div>
       </div>
     </header>
     <main>
-      <div class="container section filters">
+      <div class="container section">
         <div>
           <nav>
             <ul class="buttons">
-              <li><button class="button highlight" type="button">Wszystkie</button></li>
-              <li><button class="button highlight" type="button">Strony</button></li>
-              <li><button class="button highlight" type="button">Aplikacje</button></li>
-              <li><button class="button highlight" type="button">Dizajn</button></li>
-              <li><button class="button highlight" type="button">Marketing</button></li>
+              <li><button class="buttons__button highlight" type="button">Wszystkie</button></li>
+              <li><button class="buttons__button highlight" type="button">Strony</button></li>
+              <li><button class="buttons__button highlight" type="button">Aplikacje</button></li>
+              <li><button class="buttons__button highlight" type="button">Dizajn</button></li>
+              <li><button class="buttons__button highlight" type="button">Marketing</button></li>
             </ul>
           </nav>
         </div>
         <div>
           <ul class="portfolio">
-            <li class="portfolio-example">
+            <li class="portfolio-example transition">
               <div>
                 <div class="portfolio-example__area">
                   <div class="portfolio-example__bluewindow transition">
@@ -80,17 +82,17 @@
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio__image"
+                    class="portfolio-example__image"
                     src="images/portfolio/webPageOnLaptop.jpg"
                     alt="Obraz strony internetowej na laptopie"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio__section">
-                  <hgroup class="portfolio__titlegroup">
-                    <h2 class="portfolio__title">Technocrack</h2>
-                    <p class="portfolio__comment">Strona internetowa</p>
+                <section class="portfolio-example__section">
+                  <hgroup class="portfolio-example__titlegroup">
+                    <h2 class="portfolio-example__title">Technocrack</h2>
+                    <p class="portfolio-example__comment">Strona internetowa</p>
                   </hgroup>
                 </section>
               </div>
