modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   portfolio.html 	modified:   sass/components/_portfolio-example.scss

--- a/portfolio.html
+++ b/portfolio.html
@@ -106,17 +106,17 @@
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio__image"
+                    class="portfolio-example__image"
                     src="images/portfolio/basketballPlayers.jpg"
                     alt="Koszykarze"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio__section">
-                  <hgroup class="portfolio__titlegroup">
-                    <h2 class="portfolio__title">Grafika New Orlean vs Golden Star</h2>
-                    <p class="portfolio__comment">Dizajn</p>
+                <section class="portfolio-example__section">
+                  <hgroup class="portfolio-example__titlegroup">
+                    <h2 class="portfolio-example__title">Grafika New Orlean vs Golden Star</h2>
+                    <p class="portfolio-example__comment">Dizajn</p>
                   </hgroup>
                 </section>
               </div>
@@ -130,17 +130,17 @@
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio__image"
+                    class="portfolio-example__image"
                     src="images/portfolio/logoOfRestaurant.jpg"
                     alt="Logo restauracji"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio__section">
-                  <hgroup class="portfolio__titlegroup">
-                    <h2 class="portfolio__title">Restauracja Seafood</h2>
-                    <p class="portfolio__comment">Aplikacja</p>
+                <section class="portfolio-example__section">
+                  <hgroup class="portfolio-example__titlegroup">
+                    <h2 class="portfolio-example__title">Restauracja Seafood</h2>
+                    <p class="portfolio-example__comment">Aplikacja</p>
                   </hgroup>
                 </section>
               </div>
@@ -154,17 +154,17 @@
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio__image"
+                    class="portfolio-example__image"
                     src="images/portfolio/headphones.jpg"
                     alt="Słuchawki"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio__section">
-                  <hgroup class="portfolio__titlegroup">
-                    <h2 class="portfolio__title">Projekt Prime</h2>
-                    <p class="portfolio__comment">Marketing</p>
+                <section class="portfolio-example__section">
+                  <hgroup class="portfolio-example__titlegroup">
+                    <h2 class="portfolio-example__title">Projekt Prime</h2>
+                    <p class="portfolio-example__comment">Marketing</p>
                   </hgroup>
                 </section>
               </div>
@@ -178,17 +178,17 @@
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio__image"
+                    class="portfolio-example__image"
                     src="images/portfolio/boxes.jpg"
                     alt="Pudełka"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio__section">
-                  <hgroup class="portfolio__titlegroup">
-                    <h2 class="portfolio__title">Projekt Boxes</h2>
-                    <p class="portfolio__comment">Aplikacja</p>
+                <section class="portfolio-example__section">
+                  <hgroup class="portfolio-example__titlegroup">
+                    <h2 class="portfolio-example__title">Projekt Boxes</h2>
+                    <p class="portfolio-example__comment">Aplikacja</p>
                   </hgroup>
                 </section>
               </div>
@@ -202,17 +202,17 @@
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio__image"
+                    class="portfolio-example__image"
                     src="images/portfolio/webpageInspirationHasNoBorders.jpg"
                     alt="Strona internetowa w monitorze"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio__section">
-                  <hgroup class="portfolio__titlegroup">
-                    <h2 class="portfolio__title">Inspiration has no Borders</h2>
-                    <p class="portfolio__comment">Strona internetowa</p>
+                <section class="portfolio-example__section">
+                  <hgroup class="portfolio-example__titlegroup">
+                    <h2 class="portfolio-example__title">Inspiration has no Borders</h2>
+                    <p class="portfolio-example__comment">Strona internetowa</p>
                   </hgroup>
                 </section>
               </div>
@@ -226,17 +226,17 @@
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio__image"
+                    class="portfolio-example__image"
                     src="images/portfolio/designOfMagazine.jpg"
                     alt="Magazyn"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio__section">
-                  <hgroup class="portfolio__titlegroup">
-                    <h2 class="portfolio__title">Magazyn Limited Edition</h2>
-                    <p class="portfolio__comment">Dizajn</p>
+                <section class="portfolio-example__section">
+                  <hgroup class="portfolio-example__titlegroup">
+                    <h2 class="portfolio-example__title">Magazyn Limited Edition</h2>
+                    <p class="portfolio-example__comment">Dizajn</p>
                   </hgroup>
                 </section>
               </div>
@@ -250,17 +250,17 @@
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio__image"
+                    class="portfolio-example__image"
                     src="images/portfolio/designOfTag.jpg"
                     alt="Etykieta"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio__section">
-                  <hgroup class="portfolio__titlegroup">
-                    <h2 class="portfolio__title">Projekt LAB</h2>
-                    <p class="portfolio__comment">Marketing</p>
+                <section class="portfolio-example__section">
+                  <hgroup class="portfolio-example__titlegroup">
+                    <h2 class="portfolio-example__title">Projekt LAB</h2>
+                    <p class="portfolio-example__comment">Marketing</p>
                   </hgroup>
                 </section>
               </div>
@@ -274,17 +274,17 @@
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio__image"
+                    class="portfolio-example__image"
                     src="images/portfolio/laptopDisplayingApplication.jpg"
                     alt="Aplikacja na laptopie"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio__section">
-                  <hgroup class="portfolio__titlegroup">
-                    <h2 class="portfolio__title">Growing Business</h2>
-                    <p class="portfolio__comment">Aplikacja</p>
+                <section class="portfolio-example__section">
+                  <hgroup class="portfolio-example__titlegroup">
+                    <h2 class="portfolio-example__title">Growing Business</h2>
+                    <p class="portfolio-example__comment">Aplikacja</p>
                   </hgroup>
                 </section>
               </div>
@@ -294,88 +294,92 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="container footer-div">
+      <div class="container footer__area">
         <div>
-          <div class="logo_bottom">
-            <a class="logo" href="#">
-              <span class="logo-web span">Web</span>
-              <span class="span logo-white">Studio</span>
+          <div class="footer__logo--padding">
+            <a class="logo " href="#">
+              <span class="logo__web span">Web</span>
+              <span class="span logo__studio logo--whitefont">Studio</span>
             </a>
           </div>
           <address>
-            <div class="highlight address address-white transition">
+            <div class="highlight footer__address address-white transition">
               m. Warszawa, Aleje Jerozolimskie 21
             </div>
             <a
-              class="highlight transition address address-grey address-mailto_padding"
+              class="highlight transition footer__address address-grey footer__address--padding"
               href="mailto:info@example.com"
             >
               info@example.com
             </a>
-            <a class="highlight transition address address-grey" href="tel:+48111111111"
+            <a class="highlight transition footer__address address-grey" href="tel:+48111111111"
               >+48 111 111 111</a
             >
           </address>
         </div>
-        <div class="footer-div2">
-          <p class="footer-p">DOŁĄCZ DO NAS</p>
-          <div class="footer-div3">
-            <div class="footer-div4 transition">
-              <div class="footer-div5">
-                <svg class="footer-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
+        <div class="footer__socialarea">
+          <p class="footer__comment">DOŁĄCZ DO NAS</p>
+          <div class="footer__socials">
+            <div class="socials">
+              <div class="socials__area socials__area--greybackground transition">
+                <div class="socials__subarea socials__subarea--whitecolor">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </div>
               </div>
-            </div>
-            <div class="footer-div4 transition">
-              <div class="footer-div5">
-                <svg class="footer-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
+              <div class="socials__area socials__area--greybackground transition">
+                <div class="socials__subarea socials__subarea--whitecolor">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </div>
               </div>
-            </div>
-            <div class="footer-div4 transition">
-              <div class="footer-div5">
-                <svg class="footer-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
+              <div class="socials__area socials__area--greybackground transition">
+                <div class="socials__subarea socials__subarea--whitecolor">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </div>
               </div>
-            </div>
-            <div class="footer-div4 transition">
-              <div class="footer-div5">
-                <svg class="footer-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
+              <div class="socials__area socials__area--greybackground transition">
+                <div class="socials__subarea socials__subarea--whitecolor">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="footer-div6">
-          <p class="footer-p">ZAPISZ SIĘ DO NEWSLETTERA</p>
-          <div class="footer-div7">
-            <form
-              class="footer-form"
-              autocomplete="off"
-              method="POST"
-              action="javascript:void(0);"
-              id="footer-email"
-            >
-              <label class="footer-label">
-                <input
-                  class="footer-input"
-                  type="email"
-                  name="email"
-                  placeholder="E-mail"
-                  required
-                />
-              </label>
-              <button class="footer-form-button" type="submit">
-                <span class="footer-form-div">Zapisz się</span>
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
-            </form>
+        <div class="footer__newsletter">
+          <div class="newsletter">
+            <p class="newsletter__comment">ZAPISZ SIĘ DO NEWSLETTERA</p>
+            <div class="newsletter__section">
+              <form
+                class="newsletter__form"
+                autocomplete="off"
+                method="POST"
+                action="javascript:void(0);"
+                id="footer-email"
+              >
+                <label class="newsletter__label">
+                  <input
+                    class="newsletter__input"
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                    required
+                  />
+                </label>
+                <button class="newsletter__button" type="submit">
+                  <span class="newsletter__button--comment">Zapisz się</span>
+                  <svg class="socials__icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-icon-send"></use>
+                  </svg>
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
