--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,12 @@
         <nav class="navigation">
           <ul class="navigation__list">
             <li>
-              <a class="navigation highlight transition underline" href="index.html">Agencja</a>
+              <a class="navigation highlight transition" href="index.html">Agencja</a>
             </li>
             <li>
-              <a class="transition navigation highlight navigation__link" href="portfolio.html"
+              <a
+                class="transition navigation highlight navigation__link underline"
+                href="portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -297,7 +299,7 @@
       <div class="container footer__area">
         <div>
           <div class="footer__logo--padding">
-            <a class="logo " href="#">
+            <a class="logo" href="#">
               <span class="logo__web span">Web</span>
               <span class="span logo__studio logo--whitefont">Studio</span>
             </a>
