modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   index.html 	modified:   portfolio.html 	modified:   sass/components/_ourclients.scss 	modified:   sass/main.scss

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,17 +27,19 @@
         </a>
         <nav class="navigation">
           <ul class="navigation__list">
-            <li>
+            <li class="navigation__element">
               <a class="navigation highlight transition" href="index.html">Agencja</a>
             </li>
-            <li>
+            <li class="navigation__element">
               <a
                 class="transition navigation highlight navigation__link underline"
                 href="portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li><a class="navigation highlight transition" href="">Kontakty</a></li>
+            <li class="navigation__element">
+              <a class="navigation highlight transition" href="">Kontakty</a>
+            </li>
           </ul>
         </nav>
         <div class="address">
@@ -76,7 +78,7 @@
         <div>
           <ul class="portfolio">
             <li class="portfolio-example transition">
-              <div>
+              <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
                   <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -100,7 +102,7 @@
               </div>
             </li>
             <li class="portfolio-example">
-              <div>
+              <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
                   <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -124,7 +126,7 @@
               </div>
             </li>
             <li class="portfolio-example">
-              <div>
+              <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
                   <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -148,7 +150,7 @@
               </div>
             </li>
             <li class="portfolio-example">
-              <div>
+              <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
                   <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -172,7 +174,7 @@
               </div>
             </li>
             <li class="portfolio-example">
-              <div>
+              <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
                   <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -196,7 +198,7 @@
               </div>
             </li>
             <li class="portfolio-example">
-              <div>
+              <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
                   <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -220,7 +222,7 @@
               </div>
             </li>
             <li class="portfolio-example">
-              <div>
+              <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
                   <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -244,7 +246,7 @@
               </div>
             </li>
             <li class="portfolio-example">
-              <div>
+              <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
                   <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -268,7 +270,7 @@
               </div>
             </li>
             <li class="portfolio-example">
-              <div>
+              <div class="portfolio-example__overarea">
                 <div class="portfolio-example__area">
                   <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
@@ -297,14 +299,14 @@
     </main>
     <footer class="footer">
       <div class="container footer__area">
-        <div>
+        <div class="container footer__subarea">
           <div class="footer__logo--padding">
             <a class="logo" href="#">
               <span class="logo__web span">Web</span>
               <span class="span logo__studio logo--whitefont">Studio</span>
             </a>
           </div>
-          <address>
+          <address class="footer__addressarea">
             <div class="highlight footer__address address-white transition">
               m. Warszawa, Aleje Jerozolimskie 21
             </div>
