--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
         </a>
         <nav class="navigation">
           <ul class="navigation__list">
-            <li>
+            <li class="navigation__item">
               <a class="navigation highlight transition underline" href="index.html">Agencja</a>
             </li>
-            <li>
+            <li class="navigation__item">
               <a class="transition navigation highlight navigation__link" href="portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li><a class="navigation highlight transition" href="">Kontakty</a></li>
+            <li class="navigation__item"><a class="navigation highlight transition" href="">Kontakty</a></li>
           </ul>
         </nav>
         <div class="address">
@@ -146,8 +146,8 @@
       <div class="placeholder">
         <div class="section placeholder__section">
           <ul class="placeholder__list container">
-            <li>
-              <div>
+            <li class="placeholder__element">
+              <div class="placeholder__elementArea">
                 <div class="placeholder__icon">
                   <svg width="70" height="70">
                     <use href="./images/icons.svg#icon-antenna-1"></use>
@@ -162,8 +162,8 @@
                 </hgroup>
               </div>
             </li>
-            <li>
-              <div>
+            <li class="placeholder__element">
+              <div class="placeholder__elementArea">
                 <div class="placeholder__icon">
                   <svg width="70" height="70">
                     <use href="./images/icons.svg#icon-clock-1"></use>
@@ -178,8 +178,8 @@
                 </hgroup>
               </div>
             </li>
-            <li>
-              <div>
+            <li class="placeholder__element">
+              <div class="placeholder__elementArea">
                 <div class="placeholder__icon">
                   <svg width="70" height="70">
                     <use href="./images/icons.svg#icon-diagram-1"></use>
@@ -194,8 +194,8 @@
                 </hgroup>
               </div>
             </li>
-            <li>
-              <div>
+            <li class="placeholder__element">
+              <div class="placeholder__elementArea">
                 <div class="placeholder__icon">
                   <svg width="70" height="70">
                     <use href="./images/icons.svg#icon-astronaut-1"></use>
@@ -215,7 +215,7 @@
         <section class="container ourservices">
           <h2 class="ourservices__title">Czym się zajmujemy</h2>
           <ul class="ourservices__list">
-            <li>
+            <li class="placeholder__element">
               <div class="ourservices__section">
                 <p class="ourservices__comment">APLIKACJE KOMPUTEROWE</p>
                 <img
@@ -226,7 +226,7 @@
                 />
               </div>
             </li>
-            <li>
+            <li class="placeholder__element">
               <div class="ourservices__section">
                 <p class="ourservices__comment">APLIKACJE MOBILNE</p>
                 <img
@@ -237,7 +237,7 @@
                 />
               </div>
             </li>
-            <li>
+            <li class="placeholder__element">
               <div class="ourservices__section">
                 <p class="ourservices__comment">ROZWIĄZANIA GRAFICZNE</p>
                 <img
@@ -406,9 +406,9 @@
           </ul>
         </div>
       </section>
-      <section class="container ourclients section">
-        <h2 class="ourclients__title">Nasi klienci</h2>
-        <div class="ourclients__section">
+      <section class="ourClients">
+        <h2 class="ourClients__title">Nasi klienci</h2>
+        <div class="ourClients__section">
           <div class="client client--border button">
             <svg width="41" height="47" class="client_image transition">
               <use href="./images/icons.svg#icon-Union"></use>
@@ -444,14 +444,14 @@
     </main>
     <footer class="footer">
       <div class="container footer__area">
-        <div>
+        <div class="container footer__subarea">
           <div class="footer__logo--padding">
-            <a class="logo " href="#">
+            <a class="logo" href="#">
               <span class="logo__web span">Web</span>
               <span class="span logo__studio logo--whitefont">Studio</span>
             </a>
           </div>
-          <address>
+          <address class="footer__addressarea">
             <div class="highlight footer__address address-white transition">
               m. Warszawa, Aleje Jerozolimskie 21
             </div>
